[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-exercises"
version = "1.0.0"
description = "Data Structures and Algorithms Exercises CLI"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
dsa = "dsa:cli"
